@@ -1,19 +1,19 @@
-705b298f97bdd907725c282773b410ce *DESCRIPTION
+de0b72ed22b70bd17fcc69cab3eed1d8 *DESCRIPTION
 f55ac9ec390adda0281cfa0706cf8894 *NAMESPACE
-9508f9a2fc44e08d009bda9872a41988 *NEWS
+b078382df99357aefc2c35815f6ffb1d *NEWS
 d9d07ff1318c406cb977d5005d6f8417 *R/families.R
 20050aa134da1948532cc2bd1aa087a1 *R/mboostLSS.R
 53fdd56c65f4be43270ccf1b9001615e *R/mboost_changes.R
-07d8c6b7fa63bb066aac6a511995e5fe *R/methods.R
-9508f9a2fc44e08d009bda9872a41988 *inst/CHANGES
-1ec7af50d382963b2bde43eca130462d *inst/CITATION
+af3be1cbbaf0267bab8388b0c2117cdd *R/methods.R
+b078382df99357aefc2c35815f6ffb1d *inst/CHANGES
+1f3f1cbf6f2dc331feb9dee39be76f8e *inst/CITATION
 20ccd708e59868241b4c9dcad4b433ac *man/families.Rd
 ed57bbf25f35ced06d4e9fd69d24d80f *man/gamboostLSS-package.Rd
 315f77bcdee4432574be05e272c58796 *man/mboostLSS.Rd
 0c292791d22a554aa2f003030a0ec749 *man/methods.Rd
 46d81f8b7af3572b90dc868044a6c5ee *tests/Examples/gamboostLSS-Ex.Rout.save
-7eb22435bcfe485747a622956180ace1 *tests/bugfixes.R
-64fd28e266ede7882f1cf1eec4b4bffe *tests/bugfixes.Rout.save
+1918d232cfaa25ca4ecf153bef696de2 *tests/bugfixes.R
+cf647be0b110e4217a8e2f2838b8ae24 *tests/bugfixes.Rout.save
 a21f925723c9d466916a5624a5df90b5 *tests/regtest-families.R
 a5dde213c3944826b7e5b06925a52553 *tests/regtest-families.Rout.save
 8e41cc56bff7ffc4b391fa0ff35db5aa *tests/regtest-gamboostLSS.R
